# gaipl-ai-pragnya

./: .gitignore  README.md
artifacts/: Hackathon-PPT.pptx  integrated_platform_management.pptx
artifacts/arch/: README.md
code/: README.md
code/ai-connect/: README.md  pyproject.toml
code/ai-connect/ai_connect/: ai_lib.py  index.html  main.py  test_ws.py  training_data.jsonl  ws_connection_manager.py
code/ai-tools/: pyproject.toml
code/ai-tools/tests/: test_ws.py
code/fastapi/: README.md  incidents.json  main.py  requirements.txt
code/payloads/: CI_Map.xlsx  ci_relationship.json  configuration_Item.json  incidents.json  knowledge_base.json  questions.json  relatedINC.json  telemetry.json
code/services-connect/: README.md  pyproject.toml
code/services-connect/app/: main.py
code/services-connect/app/routers/: incidents.py  kb.py  relatedINC.py  telemetry.py
code/services-connect/services_connect/: main.py
code/services-connect/services_connect/routers/: cmdb.py  incidents.py  kb.py
code/web/: package-lock.json  package.json
code/web/public/: index.html
code/web/src/: App.css  App.js  DiagramModal.css  DiagramModal.js  Entry.css  Entry.js  ModalContext.js  ToolList.css  ToolList.js  index.css  index.js  modalconstant.js
code/web/src/context/: IncidentContext.js
code/web/src/ide-component/: IDELandingPage.css  IDELandingPage.js
code/web/src/ide-component/ai-chat/: AiChat.css  AiChat.js  ChatBox.css  ChatBox.js  ChatBox.scss  LoadingDots.css  LoadingDots.js
code/web/src/ide-component/alerts/: AlertCard.css  AlertCard.js  AlertDetails.css  (+6 more)
(+41 files in other folders)
